lang: add missing modes.noMatchFound translations
Add missing 'No matching modes found' translation key across all locales
to fix failing translation tests.

Fixes: #3422
Signed-off-by: Eric Wheeler <roo-code@z.ewheeler.org>

--- a/webview-ui/src/i18n/locales/ca/prompts.json
+++ b/webview-ui/src/i18n/locales/ca/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "Editar modes globals",
 		"editProjectModes": "Editar modes de projecte (.roomodes)",
 		"createModeHelpText": "Feu clic a + per crear un nou mode personalitzat, o simplement demaneu a Roo al xat que en creï un per a vostè!",
-		"selectMode": "Cerqueu modes"
+		"selectMode": "Cerqueu modes",
+		"noMatchFound": "No s'han trobat modes coincidents"
 	},
 	"apiConfiguration": {
 		"title": "Configuració d'API",
