--- a/webview-ui/src/i18n/locales/fr/prompts.json
+++ b/webview-ui/src/i18n/locales/fr/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "Modifier les modes globaux",
 		"editProjectModes": "Modifier les modes du projet (.roomodes)",
 		"createModeHelpText": "Cliquez sur + pour créer un nouveau mode personnalisé, ou demandez simplement à Roo dans le chat de vous en créer un !",
-		"selectMode": "Rechercher les modes"
+		"selectMode": "Rechercher les modes",
+		"noMatchFound": "Aucun mode correspondant trouvé"
 	},
 	"apiConfiguration": {
 		"title": "Configuration API",
