--- a/webview-ui/src/i18n/locales/ru/prompts.json
+++ b/webview-ui/src/i18n/locales/ru/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "Редактировать глобальные режимы",
 		"editProjectModes": "Редактировать режимы проекта (.roomodes)",
 		"createModeHelpText": "Нажмите +, чтобы создать новый пользовательский режим, или просто попросите Roo в чате создать его для вас!",
-		"selectMode": "Поиск режимов"
+		"selectMode": "Поиск режимов",
+		"noMatchFound": "Соответствующие режимы не найдены"
 	},
 	"apiConfiguration": {
 		"title": "Конфигурация API",
