--- a/webview-ui/src/i18n/locales/vi/prompts.json
+++ b/webview-ui/src/i18n/locales/vi/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "Chỉnh sửa chế độ toàn cục",
 		"editProjectModes": "Chỉnh sửa chế độ dự án (.roomodes)",
 		"createModeHelpText": "Nhấn + để tạo chế độ tùy chỉnh mới, hoặc chỉ cần yêu cầu Roo trong chat tạo một chế độ cho bạn!",
-		"selectMode": "Tìm kiếm chế độ"
+		"selectMode": "Tìm kiếm chế độ",
+		"noMatchFound": "Không tìm thấy chế độ phù hợp"
 	},
 	"apiConfiguration": {
 		"title": "Cấu hình API",
