--- a/webview-ui/src/i18n/locales/ko/prompts.json
+++ b/webview-ui/src/i18n/locales/ko/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "전역 모드 편집",
 		"editProjectModes": "프로젝트 모드 편집 (.roomodes)",
 		"createModeHelpText": "새 커스텀 모드를 만들려면 + 버튼을 클릭하거나, 채팅에서 Roo에게 만들어달라고 요청하세요!",
-		"selectMode": "모드 검색"
+		"selectMode": "모드 검색",
+		"noMatchFound": "일치하는 모드를 찾을 수 없습니다"
 	},
 	"apiConfiguration": {
 		"title": "API 구성",
