--- a/webview-ui/src/i18n/locales/tr/prompts.json
+++ b/webview-ui/src/i18n/locales/tr/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "Global modları düzenle",
 		"editProjectModes": "Proje modlarını düzenle (.roomodes)",
 		"createModeHelpText": "Yeni bir özel mod oluşturmak için + düğmesine tıklayın veya sohbette Roo'dan sizin için bir tane oluşturmasını isteyin!",
-		"selectMode": "Modları Ara"
+		"selectMode": "Modları Ara",
+		"noMatchFound": "Eşleşen mod bulunamadı"
 	},
 	"apiConfiguration": {
 		"title": "API Yapılandırması",
