--- a/webview-ui/src/i18n/locales/zh-CN/prompts.json
+++ b/webview-ui/src/i18n/locales/zh-CN/prompts.json
@@ -8,7 +8,8 @@
 		"editGlobalModes": "修改全局模式",
 		"editProjectModes": "编辑项目模式 (.roomodes)",
 		"createModeHelpText": "点击 + 创建模式，或在对话时让Roo创建一个新模式。",
-		"selectMode": "搜索模式"
+		"selectMode": "搜索模式",
+		"noMatchFound": "未找到匹配的模式"
 	},
 	"apiConfiguration": {
 		"title": "API配置",
