--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Провайдеры",
+		"uiSettings": "Настройки интерфейса",
 		"autoApprove": "Автоодобрение",
 		"browser": "Доступ к компьютеру",
 		"checkpoints": "Контрольные точки",
@@ -322,6 +323,13 @@
 			"description": "Roo читает столько строк, если модель не указала явно начало/конец. Если число меньше общего количества строк в файле, Roo создаёт индекс определений кода по строкам. Особые случаи: -1 — Roo читает весь файл (без индексации), 0 — не читает строки, а создаёт только минимальный индекс. Меньшие значения минимизируют начальный контекст, позволяя точнее читать нужные диапазоны строк. Явные запросы начала/конца не ограничиваются этим параметром.",
 			"lines": "строк",
 			"always_full_read": "Всегда читать весь файл"
+		}
+	},
+	"uiSettings": {
+		"description": "Конфигурация, связанная с пользовательским интерфейсом",
+		"markdownBlockLineheight": {
+			"label": "Межстрочный интервал содержимого панели",
+			"description": "Отрегулируйте межстрочный интервал содержимого панели, чтобы улучшить читаемость."
 		}
 	},
 	"terminal": {
