--- a/webview-ui/src/i18n/locales/vi/settings.json
+++ b/webview-ui/src/i18n/locales/vi/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Nhà cung cấp",
+		"uiSettings": "Cài đặt giao diện",
 		"autoApprove": "Phê duyệt",
 		"browser": "Trình duyệt",
 		"checkpoints": "Điểm kiểm tra",
@@ -322,6 +323,13 @@
 			"description": "Roo đọc số dòng này khi mô hình không chỉ định giá trị bắt đầu/kết thúc. Nếu số này nhỏ hơn tổng số dòng của tệp, Roo sẽ tạo một chỉ mục số dòng của các định nghĩa mã. Trường hợp đặc biệt: -1 chỉ thị Roo đọc toàn bộ tệp (không tạo chỉ mục), và 0 chỉ thị không đọc dòng nào và chỉ cung cấp chỉ mục dòng cho ngữ cảnh tối thiểu. Giá trị thấp hơn giảm thiểu việc sử dụng ngữ cảnh ban đầu, cho phép đọc chính xác các phạm vi dòng sau này. Các yêu cầu có chỉ định bắt đầu/kết thúc rõ ràng không bị giới hạn bởi cài đặt này.",
 			"lines": "dòng",
 			"always_full_read": "Luôn đọc toàn bộ tệp"
+		}
+	},
+	"uiSettings": {
+		"description": "Cấu hình liên quan đến giao diện người dùng",
+		"markdownBlockLineheight": {
+			"label": "Khoảng cách dòng nội dung bảng điều khiển",
+			"description": "Điều chỉnh khoảng cách giữa các dòng nội dung bảng điều khiển để dễ đọc hơn."
 		}
 	},
 	"terminal": {
