--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Proveïdors",
+		"uiSettings": "Configuració de la interfície",
 		"autoApprove": "Auto-aprovació",
 		"browser": "Accés a l'ordinador",
 		"checkpoints": "Punts de control",
@@ -322,6 +323,13 @@
 			"description": "Roo llegeix aquest nombre de línies quan el model omet els valors d'inici/final. Si aquest nombre és menor que el total del fitxer, Roo genera un índex de números de línia de les definicions de codi. Casos especials: -1 indica a Roo que llegeixi tot el fitxer (sense indexació), i 0 indica que no llegeixi cap línia i proporcioni només índexs de línia per a un context mínim. Valors més baixos minimitzen l'ús inicial de context, permetent lectures posteriors de rangs de línies precisos. Les sol·licituds amb inici/final explícits no estan limitades per aquesta configuració.",
 			"lines": "línies",
 			"always_full_read": "Llegeix sempre el fitxer sencer"
+		}
+	},
+	"uiSettings": {
+		"description": "Configuració relacionada amb la interfície d'usuari",
+		"markdownBlockLineheight": {
+			"label": "Espaiat entre línies del contingut del panell",
+			"description": "Ajusteu l'interlineat del contingut del panell per millorar la llegibilitat."
 		}
 	},
 	"terminal": {
