--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "प्रदाता",
+		"uiSettings": "इंटरफ़ेस सेटिंग्स",
 		"autoApprove": "अनुमोदन",
 		"browser": "ब्राउज़र",
 		"checkpoints": "चेकपॉइंट",
@@ -322,6 +323,13 @@
 			"description": "जब मॉडल प्रारंभ/अंत मान नहीं देता है, तो Roo इतनी पंक्तियाँ पढ़ता है। यदि यह संख्या फ़ाइल की कुल पंक्तियों से कम है, तो Roo कोड परिभाषाओं का पंक्ति क्रमांक इंडेक्स बनाता है। विशेष मामले: -1 Roo को पूरी फ़ाइल पढ़ने का निर्देश देता है (इंडेक्सिंग के बिना), और 0 कोई पंक्ति न पढ़ने और न्यूनतम संदर्भ के लिए केवल पंक्ति इंडेक्स प्रदान करने का निर्देश देता है। कम मान प्रारंभिक संदर्भ उपयोग को कम करते हैं, जो बाद में सटीक पंक्ति श्रेणी पढ़ने की अनुमति देता है। स्पष्ट प्रारंभ/अंत अनुरोध इस सेटिंग से सीमित नहीं हैं।",
 			"lines": "पंक्तियाँ",
 			"always_full_read": "हमेशा पूरी फ़ाइल पढ़ें"
+		}
+	},
+	"uiSettings": {
+		"description": "उपयोगकर्ता इंटरफ़ेस संबंधित कॉन्फ़िगरेशन",
+		"markdownBlockLineheight": {
+			"label": "पैनल सामग्री पंक्ति रिक्ति",
+			"description": "पठनीयता में सुधार के लिए पैनल सामग्री की पंक्ति रिक्ति समायोजित करें."
 		}
 	},
 	"terminal": {
