--- a/webview-ui/src/i18n/locales/it/settings.json
+++ b/webview-ui/src/i18n/locales/it/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Fornitori",
+		"uiSettings": "Impostazioni dell'interfaccia",
 		"autoApprove": "Auto-approvazione",
 		"browser": "Accesso computer",
 		"checkpoints": "Punti di controllo",
@@ -322,6 +323,13 @@
 			"description": "Roo legge questo numero di righe quando il modello omette i valori di inizio/fine. Se questo numero è inferiore al totale del file, Roo genera un indice dei numeri di riga delle definizioni di codice. Casi speciali: -1 indica a Roo di leggere l'intero file (senza indicizzazione), e 0 indica di non leggere righe e fornire solo indici di riga per un contesto minimo. Valori più bassi minimizzano l'utilizzo iniziale del contesto, permettendo successive letture precise di intervalli di righe. Le richieste con inizio/fine espliciti non sono limitate da questa impostazione.",
 			"lines": "righe",
 			"always_full_read": "Leggi sempre l'intero file"
+		}
+	},
+	"uiSettings": {
+		"description": "Configurazione relativa all'interfaccia utente",
+		"markdownBlockLineheight": {
+			"label": "Interlinea del contenuto del pannello",
+			"description": "Regola la spaziatura delle righe del contenuto del pannello per migliorarne la leggibilità."
 		}
 	},
 	"terminal": {
