--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "プロバイダー",
+		"uiSettings": "インターフェース設定",
 		"autoApprove": "自動承認",
 		"browser": "コンピューターアクセス",
 		"checkpoints": "チェックポイント",
@@ -322,6 +323,13 @@
 			"description": "モデルが開始/終了の値を指定しない場合、Rooはこの行数を読み込みます。この数がファイルの総行数より少ない場合、Rooはコード定義の行番号インデックスを生成します。特殊なケース：-1はRooにファイル全体を読み込むよう指示し（インデックス作成なし）、0は行を読み込まず最小限のコンテキストのために行インデックスのみを提供するよう指示します。低い値は初期コンテキスト使用量を最小限に抑え、後続の正確な行範囲の読み込みを可能にします。明示的な開始/終了の要求はこの設定による制限を受けません。",
 			"lines": "行",
 			"always_full_read": "常にファイル全体を読み込む"
+		}
+	},
+	"uiSettings": {
+		"description": "ユーザーインターフェース関連の設定",
+		"markdownBlockLineheight": {
+			"label": "パネルコンテンツの行間隔",
+			"description": "読みやすさを向上させるために、パネル コンテンツの行間隔を調整します。"
 		}
 	},
 	"terminal": {
