--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Dostawcy",
+		"uiSettings": "Ustawienia interfejsu",
 		"autoApprove": "Auto-zatwierdzanie",
 		"browser": "Dostęp komputera",
 		"checkpoints": "Punkty kontrolne",
@@ -322,6 +323,13 @@
 			"description": "Roo odczytuje tę liczbę linii, gdy model nie określa wartości początkowej/końcowej. Jeśli ta liczba jest mniejsza niż całkowita liczba linii pliku, Roo generuje indeks numerów linii definicji kodu. Przypadki specjalne: -1 nakazuje Roo odczytać cały plik (bez indeksowania), a 0 nakazuje nie czytać żadnych linii i dostarczyć tylko indeksy linii dla minimalnego kontekstu. Niższe wartości minimalizują początkowe użycie kontekstu, umożliwiając późniejsze precyzyjne odczyty zakresów linii. Jawne żądania początku/końca nie są ograniczone tym ustawieniem.",
 			"lines": "linii",
 			"always_full_read": "Zawsze czytaj cały plik"
+		}
+	},
+	"uiSettings": {
+		"description": "Konfiguracja związana z interfejsem użytkownika",
+		"markdownBlockLineheight": {
+			"label": "Odstęp między wierszami zawartości panelu",
+			"description": "Aby poprawić czytelność, dostosuj odstępy między wierszami zawartości panelu."
 		}
 	},
 	"terminal": {
