--- a/webview-ui/src/i18n/locales/pt-BR/settings.json
+++ b/webview-ui/src/i18n/locales/pt-BR/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Provedores",
+		"uiSettings": "Configurações de interface",
 		"autoApprove": "Aprovação",
 		"browser": "Navegador",
 		"checkpoints": "Checkpoints",
@@ -322,6 +323,13 @@
 			"description": "O Roo lê este número de linhas quando o modelo omite valores de início/fim. Se este número for menor que o total do arquivo, o Roo gera um índice de números de linha das definições de código. Casos especiais: -1 instrui o Roo a ler o arquivo inteiro (sem indexação), e 0 instrui a não ler linhas e fornecer apenas índices de linha para contexto mínimo. Valores mais baixos minimizam o uso inicial de contexto, permitindo leituras posteriores precisas de intervalos de linhas. Requisições com início/fim explícitos não são limitadas por esta configuração.",
 			"lines": "linhas",
 			"always_full_read": "Sempre ler o arquivo inteiro"
+		}
+	},
+	"uiSettings": {
+		"description": "Configuração relacionada à interface do usuário",
+		"markdownBlockLineheight": {
+			"label": "Espaçamento entre linhas do conteúdo do painel",
+			"description": "Ajuste o espaçamento entre linhas do conteúdo do painel para melhorar a legibilidade."
 		}
 	},
 	"terminal": {
