--- a/webview-ui/src/i18n/locales/tr/settings.json
+++ b/webview-ui/src/i18n/locales/tr/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "Sağlayıcılar",
+		"uiSettings": "Arayüz ayarları",
 		"autoApprove": "Oto-Onay",
 		"browser": "Bilgisayar Erişimi",
 		"checkpoints": "Kontrol Noktaları",
@@ -322,6 +323,13 @@
 			"description": "Model başlangıç/bitiş değerlerini belirtmediğinde Roo bu sayıda satırı okur. Bu sayı dosyanın toplam satır sayısından azsa, Roo kod tanımlamalarının satır numarası dizinini oluşturur. Özel durumlar: -1, Roo'ya tüm dosyayı okumasını (dizinleme olmadan), 0 ise hiç satır okumamasını ve minimum bağlam için yalnızca satır dizinleri sağlamasını belirtir. Düşük değerler başlangıç bağlam kullanımını en aza indirir ve sonraki hassas satır aralığı okumalarına olanak tanır. Açık başlangıç/bitiş istekleri bu ayarla sınırlı değildir.",
 			"lines": "satır",
 			"always_full_read": "Her zaman tüm dosyayı oku"
+		}
+	},
+	"uiSettings": {
+		"description": "Kullanıcı arayüzü ile ilgili konfigürasyon",
+		"markdownBlockLineheight": {
+			"label": "Panel içerik satır aralığı",
+			"description": "Okunabilirliği artırmak için panel içeriği satır aralığını ayarlayın."
 		}
 	},
 	"terminal": {
