--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -22,6 +22,7 @@
 	},
 	"sections": {
 		"providers": "提供商",
+		"uiSettings": "界面设置",
 		"autoApprove": "自动批准",
 		"browser": "计算机交互",
 		"checkpoints": "存档点",
@@ -322,6 +323,13 @@
 			"description": "自动读取文件行数设置：-1=完整读取 0=仅生成行号索引，较小值可节省token，支持后续使用行号进行读取。 <0>了解更多</0>",
 			"lines": "行",
 			"always_full_read": "始终读取整个文件"
+		}
+	},
+	"uiSettings": {
+		"description": "用户界面相关配置",
+		"markdownBlockLineheight": {
+			"label": "面板内容行间距",
+			"description": "调整面板内容行间距，以改善可读性。"
 		}
 	},
 	"terminal": {
