vscode extension tool interface

--- a/webview-ui/src/i18n/locales/en/prompts.json
+++ b/webview-ui/src/i18n/locales/en/prompts.json
@@ -25,7 +25,8 @@
 			"edit": "Edit Files",
 			"browser": "Use Browser",
 			"command": "Run Commands",
-			"mcp": "Use MCP"
+			"mcp": "Use MCP",
+			"ext": "Use Ext"
 		},
 		"noTools": "None"
 	},
