--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -397,8 +397,8 @@
 	"experimental": {
 		"warning": "⚠️",
 		"AUTO_CONDENSE_CONTEXT": {
-			"name": "Automatically condense the context window",
-			"description": "Uses an LLM call to summarize the past conversation when half of the task's context window is used."
+			"name": "Intelligently condense the context window",
+			"description": "Uses an LLM call to summarize the past conversation when the task's context window is almost full, rather than dropping old messages. Disclaimer: the cost of summarizing is not currently included in the API costs shown in the UI."
 		},
 		"DIFF_STRATEGY_UNIFIED": {
 			"name": "Use experimental unified diff strategy",
