--- a/src/i18n/locales/tr/common.json
+++ b/src/i18n/locales/tr/common.json
@@ -96,5 +96,12 @@
 			"groqApiKey": "Groq API Anahtarı",
 			"getGroqApiKey": "Groq API Anahtarı Al"
 		}
+	},
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Otomatik Onaylı İstek Sınırına Ulaşıldı",
+			"description": "Roo, {{count}} otomatik onaylı API isteği sınırına ulaştı. Sayacı sıfırlayıp göreve devam etmek ister misiniz?",
+			"button": "Sıfırla ve Devam Et"
+		}
 	}
 }
