--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -96,5 +96,12 @@
 			"groqApiKey": "Clave API de Groq",
 			"getGroqApiKey": "Obtener clave API de Groq"
 		}
+	},
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Límite de Solicitudes Aprobadas Automáticamente Alcanzado",
+			"description": "Roo ha alcanzado el límite de {{count}} solicitudes de API aprobadas automáticamente. ¿Te gustaría restablecer el contador y continuar con la tarea?",
+			"button": "Restablecer y Continuar"
+		}
 	}
 }
