--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -96,5 +96,12 @@
 			"groqApiKey": "Khóa API Groq",
 			"getGroqApiKey": "Lấy khóa API Groq"
 		}
+	},
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Đã đạt đến giới hạn yêu cầu được tự động phê duyệt",
+			"description": "Roo đã đạt đến giới hạn {{count}} yêu cầu API được tự động phê duyệt. Bạn có muốn đặt lại bộ đếm và tiếp tục tác vụ không?",
+			"button": "Đặt lại và Tiếp tục"
+		}
 	}
 }
