--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -79,6 +79,9 @@
 			"allowedCommandsDescription": "Префиксы команд, которые могут быть автоматически выполнены при включённом параметре \"Всегда одобрять выполнение операций\". Добавьте * для разрешения всех команд (используйте с осторожностью).",
 			"commandPlaceholder": "Введите префикс команды (например, 'git ')",
 			"addButton": "Добавить"
+		},
+		"apiRequestLimit": {
+			"description": "Автоматически сделать это количество запросов к API перед запросом разрешения на продолжение задачи."
 		}
 	},
 	"providers": {
