--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -79,6 +79,9 @@
 			"allowedCommandsDescription": "當「始終核准執行操作」啟用時可以自動執行的命令前綴。新增 * 以允許所有命令（請謹慎使用）。",
 			"commandPlaceholder": "輸入命令前綴（例如 'git '）",
 			"addButton": "新增"
+		},
+		"apiRequestLimit": {
+			"description": "在要求核准繼續工作之前，自動發送這麼多 API 請求。"
 		}
 	},
 	"providers": {
