Fix C# findReferences and enhance readFunction tools
- Fixed C# findReferences tool to use selectionRange instead of range
- Enhanced readFunction tool to handle overloaded functions
- Improved output formatting for both tools
- Added support for finding references across multiple overloads
- Fixed function context display in reference results
- Added workspace-relative paths to output

--- a/webview-ui/src/i18n/locales/en/chat.json
+++ b/webview-ui/src/i18n/locales/en/chat.json
@@ -155,6 +155,12 @@
 		"wantsToSearch": "Roo wants to search this directory for <code>{{regex}}</code>:",
 		"didSearch": "Roo searched this directory for <code>{{regex}}</code>:"
 	},
+	"codeOperations": {
+		"wantsToFindReferences": "Roo wants to find references to <code>{{symbol}}</code>:",
+		"didFindReferences": "Roo found references to <code>{{symbol}}</code>:",
+		"wantsToReadFunction": "Roo wants to read the function <code>{{symbol}}</code>:",
+		"didReadFunction": "Roo read the function <code>{{symbol}}</code>:"
+	},
 	"commandOutput": "Command Output",
 	"response": "Response",
 	"arguments": "Arguments",
