feat: `installedMetadata` MVP (#10)
* feat: `installedMetadata` MVP

* feat: removal support for installed items (+ general refactors)

--- a/webview-ui/src/i18n/locales/en/marketplace.json
+++ b/webview-ui/src/i18n/locales/en/marketplace.json
@@ -57,6 +57,8 @@
 			"from": "from {{source}}",
 			"installProject": "Install (Project)",
 			"installGlobal": "Install (Global)",
+			"removeProject": "Remove (Project)",
+			"removeGlobal": "Remove (Global)",
 			"viewSource": "View",
 			"viewOnSource": "View on {{source}}"
 		}
