--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -81,7 +81,9 @@
 			"addButton": "Add"
 		},
 		"apiRequestLimit": {
-			"description": "Automatically make this many API requests before asking for approval to continue with the task."
+			"title": "Max Requests",
+			"description": "Automatically make this many API requests before asking for approval to continue with the task.",
+			"unlimited": "Unlimited"
 		}
 	},
 	"providers": {
