--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -81,7 +81,9 @@
 			"addButton": "जोड़ें"
 		},
 		"apiRequestLimit": {
-			"description": "कार्य जारी रखने के लिए अनुमति मांगने से पहले स्वचालित रूप से इतने API अनुरोध करें।"
+			"title": "अधिकतम अनुरोध",
+			"description": "कार्य जारी रखने के लिए अनुमति मांगने से पहले स्वचालित रूप से इतने API अनुरोध करें।",
+			"unlimited": "असीमित"
 		}
 	},
 	"providers": {
