--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -81,7 +81,9 @@
 			"addButton": "Добавить"
 		},
 		"apiRequestLimit": {
-			"description": "Автоматически сделать это количество запросов к API перед запросом разрешения на продолжение задачи."
+			"title": "Максимум запросов",
+			"description": "Автоматически выполнять это количество API-запросов перед запросом разрешения на продолжение задачи.",
+			"unlimited": "Без ограничений"
 		}
 	},
 	"providers": {
