--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -81,7 +81,9 @@
 			"addButton": "추가"
 		},
 		"apiRequestLimit": {
-			"description": "작업을 계속 진행하기 위한 승인을 요청하기 전에 자동으로 이 정도의 API 요청을 수행합니다."
+			"title": "최대 요청 수",
+			"description": "작업을 계속하기 위한 승인을 요청하기 전에 자동으로 이 수의 API 요청을 수행합니다.",
+			"unlimited": "무제한"
 		}
 	},
 	"providers": {
