🌐 i18n(chat): migrate auto-approved request limit translations
- move translations from common.json to chat.json across locales
- update component to use Trans for dynamic text rendering

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -81,7 +81,9 @@
 			"addButton": "Afegir"
 		},
 		"apiRequestLimit": {
-			"description": "Fes aquesta quantitat de sol·licituds API automàticament abans de demanar aprovació per continuar amb la tasca."
+			"title": "Màximes Sol·licituds",
+			"description": "Fes aquesta quantitat de sol·licituds API automàticament abans de demanar aprovació per continuar amb la tasca.",
+			"unlimited": "Il·limitat"
 		}
 	},
 	"providers": {
