feat: better UI for marketplace item list (#11)
* feat: better UI for marketplace item list

* feat: better source config UI

* refactor: change how we fetch items

* fix: update state more optimistically

* fix: incorrect tags filter

* fix: better tags filtering

* feat: more consistent UI

* feat: marketplace animation

* fix: remove cache, it's fast enough

* refactor: make the UI more consistent across themes

* feat: integrate install metadata to UI

* feat: add translation files

* test: add marketplace UI

--- a/webview-ui/src/i18n/locales/en/marketplace.json
+++ b/webview-ui/src/i18n/locales/en/marketplace.json
@@ -12,7 +12,7 @@
 			"label": "Filter by type:",
 			"all": "All types",
 			"mode": "Mode",
-			"mcp": "MCP Server",
+			"mcp server": "MCP Server",
 			"prompt": "Prompt",
 			"package": "Package"
 		},
@@ -75,7 +75,6 @@
 		},
 		"current": {
 			"title": "Current Sources",
-			"count": "{{current}}/{{max}} max",
 			"empty": "No sources configured. Add a source to get started.",
 			"refresh": "Refresh this source",
 			"remove": "Remove source"
