--- a/src/i18n/locales/vi/marketplace.json
+++ b/src/i18n/locales/vi/marketplace.json
@@ -21,5 +21,77 @@
 		"match-count": "{{count}} kết quả phù hợp",
 		"view": "Xem",
 		"source": "Nguồn"
+	},
+	"install-sidebar": {
+		"title": "Cài đặt {{itemName}}",
+		"installButton": "Cài đặt",
+		"cancelButton": "Hủy"
+	},
+	"filters": {
+		"search": {
+			"placeholder": "Tìm kiếm marketplace..."
+		},
+		"type": {
+			"label": "Loại",
+			"all": "Tất cả các loại",
+			"mode": "Chế độ",
+			"mcp server": "Máy chủ MCP",
+			"prompt": "Gợi ý",
+			"package": "Gói"
+		},
+		"sort": {
+			"label": "Sắp xếp theo",
+			"name": "Tên",
+			"lastUpdated": "Cập nhật lần cuối"
+		},
+		"tags": {
+			"label": "Thẻ",
+			"clear": "Xóa {{count}} thẻ đã chọn",
+			"placeholder": "Tìm kiếm thẻ...",
+			"noResults": "Không tìm thấy thẻ nào.",
+			"selected": "{{count}} thẻ đã chọn"
+		}
+	},
+	"sources": {
+		"title": "Nguồn marketplace",
+		"description": "Thêm hoặc quản lý các nguồn cho các mục marketplace. Mỗi nguồn là một kho lưu trữ Git chứa các định nghĩa mục marketplace.",
+		"errors": {
+			"maxSources": "Tối đa {{max}} nguồn được phép.",
+			"emptyUrl": "URL không được để trống.",
+			"nonVisibleChars": "URL chứa các ký tự không hiển thị.",
+			"invalidGitUrl": "Định dạng URL Git không hợp lệ.",
+			"duplicateUrl": "Nguồn với URL này đã tồn tại.",
+			"nameTooLong": "Tên không được vượt quá 20 ký tự.",
+			"nonVisibleCharsName": "Tên chứa các ký tự không hiển thị.",
+			"duplicateName": "Nguồn với tên này đã tồn tại."
+		},
+		"add": {
+			"namePlaceholder": "Tên nguồn tùy chọn (ví dụ: 'Kho lưu trữ riêng của tôi')",
+			"urlPlaceholder": "URL kho lưu trữ Git (ví dụ: 'https://github.com/user/repo.git')",
+			"urlFormats": "Các định dạng được hỗ trợ: HTTPS, SSH hoặc đường dẫn tệp cục bộ.",
+			"button": "Thêm nguồn"
+		},
+		"current": {
+			"title": "Nguồn hiện tại",
+			"empty": "Chưa có nguồn marketplace nào được thêm.",
+			"emptyHint": "Thêm nguồn ở trên để duyệt các mục marketplace.",
+			"refresh": "Làm mới nguồn",
+			"remove": "Xóa nguồn"
+		}
+	},
+	"tabs": {
+		"browse": "Duyệt",
+		"sources": "Nguồn"
+	},
+	"title": "Marketplace",
+	"items": {
+		"refresh": {
+			"refreshing": "Đang làm mới các mục marketplace..."
+		},
+		"empty": {
+			"noItems": "Không tìm thấy mục marketplace nào.",
+			"emptyHint": "Thử điều chỉnh bộ lọc hoặc cụm từ tìm kiếm của bạn"
+		},
+		"count": "{{count}} mục"
 	}
 }
