--- a/webview-ui/src/i18n/locales/nl/chat.json
+++ b/webview-ui/src/i18n/locales/nl/chat.json
@@ -10,7 +10,8 @@
 		"contextWindow": "Contextlengte:",
 		"closeAndStart": "Taak sluiten en een nieuwe starten",
 		"export": "Taakgeschiedenis exporteren",
-		"delete": "Taak verwijderen (Shift + Klik om bevestiging over te slaan)"
+		"delete": "Taak verwijderen (Shift + Klik om bevestiging over te slaan)",
+		"condenseContext": "Taakcontext samenvatten"
 	},
 	"unpin": "Losmaken",
 	"pin": "Vastmaken",
