--- a/webview-ui/src/i18n/locales/ru/chat.json
+++ b/webview-ui/src/i18n/locales/ru/chat.json
@@ -10,7 +10,8 @@
 		"contextWindow": "Длина контекста:",
 		"closeAndStart": "Закрыть задачу и начать новую",
 		"export": "Экспортировать историю задач",
-		"delete": "Удалить задачу (Shift + клик для пропуска подтверждения)"
+		"delete": "Удалить задачу (Shift + клик для пропуска подтверждения)",
+		"condenseContext": "Сжать контекст задачи"
 	},
 	"unpin": "Открепить",
 	"pin": "Закрепить",
