Add commands to reload and toggle MCP servers; update UI and localization

--- a/webview-ui/src/i18n/locales/de/mcp.json
+++ b/webview-ui/src/i18n/locales/de/mcp.json
@@ -53,5 +53,7 @@
 	"serverStatus": {
 		"retrying": "Wiederhole...",
 		"retryConnection": "Verbindung wiederholen"
-	}
+	},
+	"reloadAllServers": "Alle MCP-Server neu laden",
+	"toggleAllServers": "Alle MCP-Server aktivieren/deaktivieren"
 }
